--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "generator",
     "wrapper"
   ],
+  "type": "library",
   "homepage": "https://www.4myth.com",
   "license": "MIT",
   "authors": [
